--- a/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup/Views/Home/Index.cshtml
+++ b/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup/Views/Home/Index.cshtml
@@ -1,31 +1,65 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<br/>
+<br />
+<button class="btn btn-primary" onclick="Agregar()">Nuevo Registro</button>
+<hr />
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>id Job</th>
+            <th>Job Title</th>
+            <th>Description</th>
+            <th>Created At</th>
+            <th>Expired At</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in @Model.Jobs)
+        {
+            <tr>
+                <th scope="row">@item.idJob</th>
+                <td>@item.JobTitle</td>
+                <td>@item.Description</td>
+                <td>@item.CreatedAt</td>
+                <td>@item.ExpiresAt</td>
+                <td style="text-align: center">
+                    <button class="btn btn-warning" onclick="Editar(@item.idJob)">Editar</button>
+                    &nbsp;&nbsp;
+                    <button class="btn btn-danger" onclick="Editar(@item.idJob)">Eliminar</button>
+                    @*<a data-value="@item.idJob" href="javascript:void(0)" class="btnEdit">Edit</a>*@
+                </td>
+            </tr>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+        }
+    </tbody>
+</table>
+@*<div class="jumbotron">
+        <h1>ASP.NET</h1>
+        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+        <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Getting started</h2>
+            <p>
+                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+                enables a clean separation of concerns and gives you full control over markup
+                for enjoyable, agile development.
+            </p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Get more libraries</h2>
+            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Web Hosting</h2>
+            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        </div>
+    </div>*@
