--- a/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup/Views/Home/Index.cshtml
+++ b/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup/Views/Home/Index.cshtml
@@ -1,9 +1,19 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<br/>
+
 <br />
-<button class="btn btn-primary" onclick="Agregar()">Nuevo Registro</button>
+<br />
+@*<button class="btn btn-primary">@Html.ActionLink("Nuevo Registro", "Index", "NuevoRegistro", new { area = ""}, null)</button>*@
+
+@*<button class="btn btn-primary" onclick="location.href='@Html.ActionLink("Nuevo Registro", "Index", "NuevoRegistro", new { area = "" }, null)'"></button>*@
+@*<input type="button" class="btn btn-primary" value="Nuevo Registro" onclick="location.href='@Url.Action("/", "NuevoRegistro", new { MaxidJob = 1 })'" />*@
+<input type="button"
+       id="NuevoRegistroBtn"
+       class="btn btn-primary"
+       value="Nuevo Registro"
+       onclick="location.href='@Url.Action("/", "NuevoRegistro")'" />
+
 <hr />
 <table class="table table-bordered">
     <thead>
@@ -36,30 +46,3 @@
         }
     </tbody>
 </table>
-@*<div class="jumbotron">
-        <h1>ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-    </div>
-
-    <div class="row">
-        <div class="col-md-4">
-            <h2>Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </div>
-    </div>*@
