--- a/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup/Views/Shared/_Layout.cshtml
+++ b/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup/Views/Shared/_Layout.cshtml
@@ -6,9 +6,11 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    
 </head>
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" id="Header" style="background: rgb(2,0,36)!important; background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(118,9,9,1) 0%, rgba(44,26,157,1) 100%, rgba(0,212,255,1) 100%)!important;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -16,13 +18,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("SaonGroup", "Index", "Home")</li>
-                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li style="font-size:large">@Html.ActionLink("SaonGroup", "Index", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -30,9 +29,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        @*<footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>*@
+        <footer>
+            <p style="font-size:x-small">Created By: Nathaly Hernández</p>
+        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
